<resources>
    <string name="edit_message">请输入信息</string>
    <string name="button_send">提交确认</string>
    <string name="button_save">保存数据</string>
    <string name="app_name">我的冰箱管理</string>
    <string name="title_home">添加</string>
    <string name="title_dashboard">一览</string>
    <string name="title_notifications">通知</string>
    <string name="itemCategory">物品类别</string>
    <string name="itemName">物品名称</string>
    <string name="itemQuantity">物品数量</string>
    <string name="itemComment">物品备注</string>
    <string name="itemCommentInput">请输入物品备注（选填）</string>
    <string name="itemPeriod">保质期限</string>
    <string name="itemPeriodInput">请输入物品保质期</string>
    <string name="addTime">存放时间</string>
    <string name="addTimeInput">请输入物品存放时间</string>
    <string name="addByPhoto">拍照添加</string>
    <string name="sendData">提交数据</string>
    <string name="saveData">保存物品</string>
    <string name="readData">读取数据</string>
    <string name="itemList">已保存物品</string>
    <string name="back">返回</string>
    <string name="confirmAdd">确认添加</string>
    <string name="saved">保存完毕！</string>
    <string name="read_error">文件读取错误！</string>
    <string-array name="itemQuantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
</resources>
