<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMessageActivity">

    <TextView
        android:id="@+id/itemCategory"
        android:layout_width="83dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/itemCategory"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textView1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/itemCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/itemCategory" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="83dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/itemName"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemCategory" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/itemName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/itemName" />

    <TextView
        android:id="@+id/itemQuantity"
        android:layout_width="83dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/itemQuantity"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/itemQuantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/itemQuantity" />

    <TextView
        android:id="@+id/itemComment"
        android:layout_width="83dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/itemComment"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemQuantity" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/itemComment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/itemComment" />

    <TextView
        android:id="@+id/itemPeriod"
        android:layout_width="83dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/itemPeriod"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemComment" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/itemPeriod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/itemPeriod" />

    <TextView
        android:id="@+id/addTime"
        android:layout_width="83dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/addTime"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPeriod" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/addTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addTime" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readData" />

    <Button
        android:id="@+id/saveData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/button_save"
        app:layout_constraintBaseline_toBaselineOf="@+id/readData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/readData" />

    <Button
        android:id="@+id/readData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/readData"
        app:layout_constraintEnd_toStartOf="@+id/saveData"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>